fix image grid spacing

--- a/styles/scss/components/hubspot-modules/image-grid.scss
+++ b/styles/scss/components/hubspot-modules/image-grid.scss
@@ -13,6 +13,7 @@
 }
 
 .image-grid {
+    margin-bottom: 35px;
 
     img {
         position: relative;
